table ui fixed and air export tab section api integration

--- a/frontend/dashboard/src/app/report/sea-export/export-lcl-report/export-lcl-outofsla-report/export-lcl-outofsla-report.component.scss
+++ b/frontend/dashboard/src/app/report/sea-export/export-lcl-report/export-lcl-outofsla-report/export-lcl-outofsla-report.component.scss
@@ -1,3 +1,36 @@
-table {
+.loading-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
+
+.loading-container p {
+  margin-top: 10px;
+}
+
+.loading-container p {
+  margin-top: 10px;
+}
+
+.table-container {
+  height: 500px; /* Set your preferred height */
+  overflow-y: auto;
+}
+
+.mat-elevation-z8 {
+  border-collapse: collapse;
   width: 100%;
+}
+
+.mat-elevation-z8 th,
+.mat-elevation-z8 td {
+  border: 1px solid rgba(0, 0, 0, 0.12);
+  padding: 8px;
+  text-align: left;
+}
+
+.mat-progress-spinner {
+  margin-right: 8px;
 }
