--- a/frontend/dashboard/src/app/report/sea-export/export-lcl-report/export-lcl-report/export-lcl-report.component.scss
+++ b/frontend/dashboard/src/app/report/sea-export/export-lcl-report/export-lcl-report/export-lcl-report.component.scss
@@ -1,17 +1,36 @@
-//  html, body {
-//   height: 100%;
-//  }
- 
-//  body{
-//   margin: 0;
-//  }
- 
-//  .mat-table {
-//     width: 100%;
-//     overflow: auto;
-//     max-height: 500px; /* Adjust as needed */
-//   }
+.loading-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
 
-table {
-    width: 100%;
-  }
+.loading-container p {
+  margin-top: 10px;
+}
+
+.loading-container p {
+  margin-top: 10px;
+}
+
+.table-container {
+  height: 500px; /* Set your preferred height */
+  overflow-y: auto;
+}
+
+.mat-elevation-z8 {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+.mat-elevation-z8 th,
+.mat-elevation-z8 td {
+  border: 1px solid rgba(0, 0, 0, 0.12);
+  padding: 8px;
+  text-align: left;
+}
+
+.mat-progress-spinner {
+  margin-right: 8px;
+}
