--- a/frontend/dashboard/src/app/report/sea-export/export-lcl-report/export-lcl-withinsla-report/export-lcl-withinsla-report.component.html
+++ b/frontend/dashboard/src/app/report/sea-export/export-lcl-report/export-lcl-withinsla-report/export-lcl-withinsla-report.component.html
@@ -1,51 +1,65 @@
 <div class="modal-content">
-  <div class="mat-elevation-z8">
-    <table mat-table [dataSource]="dataSource">
-      <!-- Position Column -->
-      <ng-container matColumnDef="dept">
-        <th mat-header-cell *matHeaderCellDef>Department</th>
-        <td mat-cell *matCellDef="let element">{{ element.dept }}</td>
-      </ng-container>
+  <div class="mat-elevation-z8 table-container">
+    <div *ngIf="isLoading; else dataContent" class="loading-container">
+      <!-- Angular Material Progress Spinner -->
+      <mat-progress-spinner mode="indeterminate"></mat-progress-spinner>
+      <!-- You can also add additional text or customize the loader further -->
+      <p>Loading...</p>
+    </div>
+    <!-- Data Content -->
+    <ng-container *ngIf="!isLoading; else loaderContent">
+      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+        <!-- Position Column -->
+        <ng-container matColumnDef="dept">
+          <th mat-header-cell *matHeaderCellDef>Department</th>
+          <td mat-cell *matCellDef="let element">{{ element.dept }}</td>
+        </ng-container>
 
-      <!-- Name Column -->
-      <ng-container matColumnDef="product">
-        <th mat-header-cell *matHeaderCellDef>Product</th>
-        <td mat-cell *matCellDef="let element">{{ element.product }}</td>
-      </ng-container>
+        <!-- Name Column -->
+        <ng-container matColumnDef="product">
+          <th mat-header-cell *matHeaderCellDef>Product</th>
+          <td mat-cell *matCellDef="let element">{{ element.product }}</td>
+        </ng-container>
 
-      <!-- Weight Column -->
-      <ng-container matColumnDef="action">
-        <th mat-header-cell *matHeaderCellDef>Action</th>
-        <td mat-cell *matCellDef="let element">{{ element.action }}</td>
-      </ng-container>
+        <!-- Weight Column -->
+        <ng-container matColumnDef="action">
+          <th mat-header-cell *matHeaderCellDef>Action</th>
+          <td mat-cell *matCellDef="let element">{{ element.action }}</td>
+        </ng-container>
 
-      <!-- Symbol Column -->
-      <ng-container matColumnDef="ref_no">
-        <th mat-header-cell *matHeaderCellDef>Reference Number</th>
-        <td mat-cell *matCellDef="let element">{{ element.ref_no }}</td>
-      </ng-container>
+        <!-- Symbol Column -->
+        <ng-container matColumnDef="ref_no">
+          <th mat-header-cell *matHeaderCellDef>Reference Number</th>
+          <td mat-cell *matCellDef="let element">{{ element.ref_no }}</td>
+        </ng-container>
 
-      <ng-container matColumnDef="ref_date">
-        <th mat-header-cell *matHeaderCellDef>Reference Number</th>
-        <td mat-cell *matCellDef="let element">
-          {{ element.ref_date | date : "dd-MM-yyyy" }}
-        </td>
-      </ng-container>
+        <ng-container matColumnDef="ref_date">
+          <th mat-header-cell *matHeaderCellDef>Reference Date</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.ref_date | date : "dd-MM-yyyy" }}
+          </td>
+        </ng-container>
 
-      <ng-container matColumnDef="ref_type">
-        <th mat-header-cell *matHeaderCellDef>Reference Type</th>
-        <td mat-cell *matCellDef="let element">{{ element.ref_type }}</td>
-      </ng-container>
+        <ng-container matColumnDef="ref_type">
+          <th mat-header-cell *matHeaderCellDef>Reference Type</th>
+          <td mat-cell *matCellDef="let element">{{ element.ref_type }}</td>
+        </ng-container>
 
-      <ng-container matColumnDef="ref_mode">
-        <th mat-header-cell *matHeaderCellDef>Reference Mode</th>
-        <td mat-cell *matCellDef="let element">{{ element.ref_mode }}</td>
-      </ng-container>
+        <ng-container matColumnDef="ref_mode">
+          <th mat-header-cell *matHeaderCellDef>Reference Mode</th>
+          <td mat-cell *matCellDef="let element">{{ element.ref_mode }}</td>
+        </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-    </table>
+        <tr
+          mat-header-row
+          *matHeaderRowDef="displayedColumns; sticky: true"
+        ></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      </table>
+    </ng-container>
 
+    <ng-template #loaderContent></ng-template>
+    <ng-template #dataContent></ng-template>
     <mat-paginator
       [pageSizeOptions]="[10, 20, 30]"
       showFirstLastButtons
