--- a/frontend/dashboard/src/app/chart/chart.component.html
+++ b/frontend/dashboard/src/app/chart/chart.component.html
@@ -7,7 +7,7 @@
 </div> -->
 
 <div class="container-fluid py-3">
-    <h1>Angular Highcharts</h1>
+    <h1>Angular Highcharts!!!</h1>
   
     <div class="row mt-5">
       <div class="col-6">
@@ -26,3 +26,5 @@
       </div>
     </div>
   </div>
+
+  <div id="div-container" style="width: 700px;"></div>
