--- a/frontend/dashboard/src/app/chart/chart.component.html
+++ b/frontend/dashboard/src/app/chart/chart.component.html
@@ -7,9 +7,9 @@
 </div> -->
 
 <div class="container-fluid py-3">
-    <h1>Angular Highcharts!!!</h1>
+    <h1>Charts!!!</h1>
   
-    <div class="row mt-5">
+    <!-- <div class="row mt-5">
       <div class="col-6">
         <div id="chart-gauge"></div>
       </div>
@@ -24,7 +24,19 @@
       <div class="col-6">
         <div id="chart-line"></div>
       </div>
+    </div> -->
+
+    <div class="row mt-5">
+      <div class="col-6">
+        <div id="div-container" style="width: 700px;"></div>
+      </div>
+      <div class="col-6">
+        <div id="div-container-stackedchart" style="width: 700px;"></div>
+      </div>
     </div>
+
+    
+    
   </div>
 
-  <div id="div-container" style="width: 700px;"></div>
+
