chart page updated

--- a/frontend/dashboard/src/app/chart/chart.component.html
+++ b/frontend/dashboard/src/app/chart/chart.component.html
@@ -1,42 +1,56 @@
-<!-- <div class="chart-container">
-  <div
-    id="monthlyChart"
-    style="min-width: 310px; height: 400px; margin: 0 auto"
-  ></div>
-  <div id="yearlyChart" class="chart"></div>
+<!-- <div class="container-fluid">
+  <h1>Charts!!!</h1>
+  <div class="row mt-5">
+    <div class="col-6">
+      <div id="div-container" style="width: 600px"></div>
+    </div>
+    <div class="col-6">
+      <div id="div-container-stackedchart" style="width: 600px"></div>
+    </div>
+  </div>
+  <div class="row mt-5">
+    <div class="col-6">
+      <div id="div-container-stackedchart1" style="width: 600px"></div>
+    </div>
+    <div class="col-6">
+      <div id="div-container-stackedchart3" style="width: 600px"></div>
+    </div>
+  </div>
+  <div class="row mt-5">
+    <div class="col-6">
+      <div id="div-container-stackedchart2" style="width: 600px"></div>
+    </div>
+  </div>
+</div>
+<div>
+  <a routerLink="/landing">back</a>
 </div> -->
 
-<div class="container-fluid py-3">
-    <h1>Charts!!!</h1>
-  
-    <!-- <div class="row mt-5">
-      <div class="col-6">
-        <div id="chart-gauge"></div>
-      </div>
-      <div class="col-6">
-        <div id="chart-pie"></div>
-      </div>
+<!-- Update your HTML template -->
+<div class="container-fluid main-container">
+  <h1 class="text-center mb-5">Charts!!!</h1>
+  <div class="row mt-5">
+    <div class="col-md-6">
+      <div id="div-container" class="chart-container"></div>
     </div>
-    <div class="row mt-5">
-      <div class="col-6">
-        <div id="chart-column"></div>
-      </div>
-      <div class="col-6">
-        <div id="chart-line"></div>
-      </div>
-    </div> -->
-
-    <div class="row mt-5">
-      <div class="col-6">
-        <div id="div-container" style="width: 500px;"></div>
-      </div>
-      <div class="col-6">
-        <div id="div-container-stackedchart" style="width: 500px;"></div>
-      </div>
+    <div class="col-md-6">
+      <div id="div-container-stackedchart" class="chart-container"></div>
     </div>
-
-    
-    
   </div>
-
-
+  <div class="row mt-5">
+    <div class="col-md-6">
+      <div id="div-container-stackedchart1" class="chart-container"></div>
+    </div>
+    <div class="col-md-6">
+      <div id="div-container-stackedchart3" class="chart-container"></div>
+    </div>
+  </div>
+  <div class="row mt-5">
+    <div class="col-md-6">
+      <div id="div-container-stackedchart2" class="chart-container"></div>
+    </div>
+  </div>
+</div>
+<div class="back-link">
+  <a routerLink="/landing">back</a>
+</div>
