--- a/frontend/dashboard/src/app/views/pages/sea-dashboard/sea-dashboard.component.html
+++ b/frontend/dashboard/src/app/views/pages/sea-dashboard/sea-dashboard.component.html
@@ -517,4 +517,11 @@
     </div>
   </div>
   <!--</div>-->
+  <!-- sea-dashboard.component.html -->
+  <div>
+    <!-- Your existing table goes here -->
+
+    <!-- Add a button or link to navigate to the chart component -->
+    <a routerLink="/chart">View Chart</a>
+  </div>
 </div>
