--- a/frontend/dashboard/src/app/landing-page/landing-page.component.html
+++ b/frontend/dashboard/src/app/landing-page/landing-page.component.html
@@ -3,6 +3,11 @@
         <div class="kt-portlet frt-das-port">
             <div class="kt-portlet-body">
                 <div class="kt-portlet-preview"> -->
+<div class="button-container">
+  <button class="styled-button" type="button" routerLink="/chart">
+    View Chart
+  </button>
+</div>
 <div>
   <mat-tab-group>
     <mat-tab label="Sea Export"
