--- a/frontend/dashboard/src/app/views/pages/sea-dashboard/sea-dashboard.component.html
+++ b/frontend/dashboard/src/app/views/pages/sea-dashboard/sea-dashboard.component.html
@@ -94,7 +94,7 @@
                                 </a>
                               </ng-container>
                               <!-- If count is 0, display 'No data found' message -->
-                              <ng-template #noData> No data found </ng-template>
+                              <ng-template #noData>_</ng-template>
                             </mat-cell>
                           </ng-container>
 
@@ -120,9 +120,7 @@
                                   >{{ element.withinSLA }}</a
                                 >
                               </ng-container>
-                              <ng-template #noDataFound
-                                >No data found</ng-template
-                              >
+                              <ng-template #noDataFound>_</ng-template>
                             </mat-cell>
                           </ng-container>
 
@@ -146,9 +144,7 @@
                                   >{{ element.outOfSLA }}</a
                                 >
                               </ng-container>
-                              <ng-template #noDataFound
-                                >No data found</ng-template
-                              >
+                              <ng-template #noDataFound>_</ng-template>
                             </mat-cell>
                           </ng-container>
 
@@ -276,7 +272,7 @@
                               </a>
                             </ng-container>
                             <!-- If count is 0, display 'No data found' message -->
-                            <ng-template #noData> No data found </ng-template>
+                            <ng-template #noData>_</ng-template>
                           </mat-cell>
                         </ng-container>
 
@@ -299,9 +295,7 @@
                                 >{{ element.withinSLA }}</a
                               >
                             </ng-container>
-                            <ng-template #noDataFound
-                              >No data found</ng-template
-                            >
+                            <ng-template #noDataFound>_</ng-template>
                           </mat-cell>
                         </ng-container>
 
@@ -325,9 +319,7 @@
                                 >{{ element.outOfSLA }}</a
                               >
                             </ng-container>
-                            <ng-template #noDataFound
-                              >No data found</ng-template
-                            >
+                            <ng-template #noDataFound>_</ng-template>
                           </mat-cell>
                         </ng-container>
 
@@ -382,7 +374,7 @@
                               </a>
                             </ng-container>
                             <!-- If count is 0, display 'No data found' message -->
-                            <ng-template #noData> No data found </ng-template>
+                            <ng-template #noData>_</ng-template>
                           </mat-cell>
                         </ng-container>
 
@@ -405,9 +397,7 @@
                                 >{{ element.withinSLA }}</a
                               >
                             </ng-container>
-                            <ng-template #noDataFound
-                              >No data found</ng-template
-                            >
+                            <ng-template #noDataFound>_</ng-template>
                           </mat-cell>
                         </ng-container>
 
@@ -431,9 +421,7 @@
                                 >{{ element.outOfSLA }}</a
                               >
                             </ng-container>
-                            <ng-template #noDataFound
-                              >No data found</ng-template
-                            >
+                            <ng-template #noDataFound>_</ng-template>
                           </mat-cell>
                         </ng-container>
 
@@ -518,10 +506,4 @@
   </div>
   <!--</div>-->
   <!-- sea-dashboard.component.html -->
-  <div>
-    <!-- Your existing table goes here -->
-
-    <!-- Add a button or link to navigate to the chart component -->
-    <a routerLink="/chart">View Chart</a>
-  </div>
 </div>
