--- a/frontend/dashboard/src/app/chart/chart.component.html
+++ b/frontend/dashboard/src/app/chart/chart.component.html
@@ -27,30 +27,28 @@
 </div> -->
 
 <!-- Update your HTML template -->
+<div class="back-link">
+  <a routerLink="/landing">back</a>
+</div>
 <div class="container-fluid main-container">
   <h1 class="text-center mb-5">Charts!!!</h1>
   <div class="row mt-5">
-    <div class="col-md-6">
+    <!-- <div class="col-md-6">
       <div id="div-container" class="chart-container"></div>
-    </div>
+    </div> -->
     <div class="col-md-6">
       <div id="div-container-stackedchart" class="chart-container"></div>
     </div>
-  </div>
-  <div class="row mt-5">
     <div class="col-md-6">
       <div id="div-container-stackedchart1" class="chart-container"></div>
     </div>
+  </div>
+  <div class="row mt-5">
     <div class="col-md-6">
       <div id="div-container-stackedchart3" class="chart-container"></div>
     </div>
-  </div>
-  <div class="row mt-5">
     <div class="col-md-6">
       <div id="div-container-stackedchart2" class="chart-container"></div>
     </div>
   </div>
-</div>
-<div class="back-link">
-  <a routerLink="/landing">back</a>
 </div>
