--- a/frontend/dashboard/src/app/landing-page/landing-page.component.scss
+++ b/frontend/dashboard/src/app/landing-page/landing-page.component.scss
@@ -62,3 +62,27 @@
   }
 }
 
+.button-container {
+  text-align: right;
+}
+
+.styled-button {
+  display: inline-block;
+  padding: 10px 20px;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+  border: 2px solid #3498db;
+  color: #3498db;
+  background-color: #ffffff;
+  border-radius: 5px;
+  transition: background-color 0.3s, color 0.3s, border-color 0.3s;
+}
+
+.styled-button:hover {
+  background-color: #3498db;
+  color: #ffffff;
+  border-color: #ffffff;
+}
